// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlanDetailsSection planDetails not displayed when plan type is not available 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="flex flex-col justify-center items-center page"
      >
        <div
          class="flex flex-col app-content app-base-font-color mt-20"
        >
          <h1
            class="title-1 m-4 mb-0 !font-light !text-[32px]/[40px]"
          >
            Plan Contact Information
          </h1>
          <section
            class="flex justify-start self-start mb-6"
          >
            <span
              class="rich-text body-1 undefined"
            >
              <div
                class="flex flex-row body-1 flex-grow md:!flex !block align-top mt-4 ml-4"
              >
                Below is the mailing address and phone number associated with your plan. 
              </div>
            </span>
          </section>
          <div
            class="flex flex-col md:!flex-row"
          >
            <div
              class="flex flex-col flex-grow page-section-36_67 items-stretch md:ml-4"
            >
              <div
                class="card-main small-section !mt-0"
              >
                <div
                  class="flex flex-col"
                >
                  <h2
                    class="title-2"
                  >
                    About Plan Contact Information
                  </h2>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <span
                    class="rich-text body-1 undefined"
                  >
                    <span>
                      This is the contact information you gave us when you started your plan. It's important to keep it up to date. To change it, you can contact your employer or
                       
                    </span>
                    <span
                      class="link"
                    >
                      <a>
                         start a chat 
                      </a>
                    </span>
                    <span>
                       with us.
                    </span>
                  </span>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 12px; min-height: 12px;"
                  />
                  <span
                    class="rich-text body-1 undefined"
                  >
                    <span>
                      Keep in mind, this is not necessarily the phone number you use for keeping your account secure. For that info,
                       
                    </span>
                    <span
                      class="link"
                    >
                      <a>
                         check profile settings.
                      </a>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <span
              style="display: block; width: 32px; min-width: 32px; height: 1px; min-height: 1px;"
            />
            <div
              class="flex flex-col flex-grow page-section-63_33 items-stretch"
            />
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="flex flex-col justify-center items-center page"
    >
      <div
        class="flex flex-col app-content app-base-font-color mt-20"
      >
        <h1
          class="title-1 m-4 mb-0 !font-light !text-[32px]/[40px]"
        >
          Plan Contact Information
        </h1>
        <section
          class="flex justify-start self-start mb-6"
        >
          <span
            class="rich-text body-1 undefined"
          >
            <div
              class="flex flex-row body-1 flex-grow md:!flex !block align-top mt-4 ml-4"
            >
              Below is the mailing address and phone number associated with your plan. 
            </div>
          </span>
        </section>
        <div
          class="flex flex-col md:!flex-row"
        >
          <div
            class="flex flex-col flex-grow page-section-36_67 items-stretch md:ml-4"
          >
            <div
              class="card-main small-section !mt-0"
            >
              <div
                class="flex flex-col"
              >
                <h2
                  class="title-2"
                >
                  About Plan Contact Information
                </h2>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <span
                  class="rich-text body-1 undefined"
                >
                  <span>
                    This is the contact information you gave us when you started your plan. It's important to keep it up to date. To change it, you can contact your employer or
                     
                  </span>
                  <span
                    class="link"
                  >
                    <a>
                       start a chat 
                    </a>
                  </span>
                  <span>
                     with us.
                  </span>
                </span>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 12px; min-height: 12px;"
                />
                <span
                  class="rich-text body-1 undefined"
                >
                  <span>
                    Keep in mind, this is not necessarily the phone number you use for keeping your account secure. For that info,
                     
                  </span>
                  <span
                    class="link"
                  >
                    <a>
                       check profile settings.
                    </a>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <span
            style="display: block; width: 32px; min-width: 32px; height: 1px; min-height: 1px;"
          />
          <div
            class="flex flex-col flex-grow page-section-63_33 items-stretch"
          />
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PlanDetailsSection renders plan details correctly on click of view who is covered 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="flex flex-col justify-center items-center page"
      >
        <div
          class="flex flex-col app-content app-base-font-color mt-20"
        >
          <h1
            class="title-1 m-4 mb-0 !font-light !text-[32px]/[40px]"
          >
            Plan Contact Information
          </h1>
          <section
            class="flex justify-start self-start mb-6"
          >
            <span
              class="rich-text body-1 undefined"
            >
              <div
                class="flex flex-row body-1 flex-grow md:!flex !block align-top mt-4 ml-4"
              >
                Below is the mailing address and phone number associated with your plan. 
              </div>
            </span>
          </section>
          <div
            class="flex flex-col md:!flex-row"
          >
            <div
              class="flex flex-col flex-grow page-section-36_67 items-stretch md:ml-4"
            >
              <div
                class="card-main small-section !mt-0"
              >
                <div
                  class="flex flex-col"
                >
                  <h2
                    class="title-2"
                  >
                    About Plan Contact Information
                  </h2>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <span
                    class="rich-text body-1 undefined"
                  >
                    <span>
                      This is the contact information you gave us when you started your plan. It's important to keep it up to date. To change it, you can contact your employer or
                       
                    </span>
                    <span
                      class="link"
                    >
                      <a>
                         start a chat 
                      </a>
                    </span>
                    <span>
                       with us.
                    </span>
                  </span>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 12px; min-height: 12px;"
                  />
                  <span
                    class="rich-text body-1 undefined"
                  >
                    <span>
                      Keep in mind, this is not necessarily the phone number you use for keeping your account secure. For that info,
                       
                    </span>
                    <span
                      class="link"
                    >
                      <a>
                         check profile settings.
                      </a>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <span
              style="display: block; width: 32px; min-width: 32px; height: 1px; min-height: 1px;"
            />
            <div
              class="flex flex-col flex-grow page-section-63_33 items-stretch"
            >
              <div
                class="card-elevated  mb-4"
              >
                <div
                  class="flex flex-col m-4"
                >
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <div
                    class="flex flex-row justify-between"
                  >
                    <p
                      class="body-1 ml-2 font-bold body-1"
                      style="display: block;"
                    >
                      Christmas Hall
                    </p>
                  </div>
                  <div
                    class="flex flex-row ml-2"
                  >
                    <p
                      class="body-1"
                      style="display: block;"
                    >
                      DOB: 6/29/2009
                    </p>
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                  />
                  <div
                    class="flex flex-row"
                  >
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <div
                      class=""
                      style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                    />
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Mailing Address
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                  />
                  <p
                    class="body-1 ml-2 w-52"
                    style="display: block;"
                  >
                    1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Primary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    7654387656
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Secondary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    N/A
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                </div>
              </div>
              <div
                class="card-elevated  mb-4"
              >
                <div
                  class="flex flex-col m-4"
                >
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <div
                    class="flex flex-row justify-between"
                  >
                    <p
                      class="body-1 ml-2 font-bold body-1"
                      style="display: block;"
                    >
                      Krissy Hall
                    </p>
                  </div>
                  <div
                    class="flex flex-row ml-2"
                  >
                    <p
                      class="body-1"
                      style="display: block;"
                    >
                      DOB: 6/15/2009
                    </p>
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                  />
                  <div
                    class="flex flex-row"
                  >
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <div
                      class=""
                      style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                    />
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Mailing Address
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                  />
                  <p
                    class="body-1 ml-2 w-52"
                    style="display: block;"
                  >
                    1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Primary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    7654387656
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Secondary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    N/A
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                </div>
              </div>
              <div
                class="card-elevated  mb-4"
              >
                <div
                  class="flex flex-col m-4"
                >
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <div
                    class="flex flex-row justify-between"
                  >
                    <p
                      class="body-1 ml-2 font-bold body-1"
                      style="display: block;"
                    >
                      Christian Hall
                    </p>
                  </div>
                  <div
                    class="flex flex-row ml-2"
                  >
                    <p
                      class="body-1"
                      style="display: block;"
                    >
                      DOB: 10/31/2011
                    </p>
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                  />
                  <div
                    class="flex flex-row"
                  >
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <div
                      class=""
                      style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                    />
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Mailing Address
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                  />
                  <p
                    class="body-1 ml-2 w-52"
                    style="display: block;"
                  >
                    1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Primary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    7654387656
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Secondary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    N/A
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                </div>
              </div>
              <div
                class="card-elevated  mb-4"
              >
                <div
                  class="flex flex-col m-4"
                >
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <div
                    class="flex flex-row justify-between"
                  >
                    <p
                      class="body-1 ml-2 font-bold body-1"
                      style="display: block;"
                    >
                      Kristy Hall
                    </p>
                  </div>
                  <div
                    class="flex flex-row ml-2"
                  >
                    <p
                      class="body-1"
                      style="display: block;"
                    >
                      DOB: 5/17/1971
                    </p>
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                  />
                  <div
                    class="flex flex-row"
                  >
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <div
                      class=""
                      style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                    />
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Mailing Address
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                  />
                  <p
                    class="body-1 ml-2 w-52"
                    style="display: block;"
                  >
                    1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Primary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    7654387656
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Secondary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    N/A
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                </div>
              </div>
              <div
                class="card-elevated  mb-4"
              >
                <div
                  class="flex flex-col m-4"
                >
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <div
                    class="flex flex-row justify-between"
                  >
                    <p
                      class="body-1 ml-2 font-bold body-1"
                      style="display: block;"
                    >
                      Chris Hall
                    </p>
                  </div>
                  <div
                    class="flex flex-row ml-2"
                  >
                    <p
                      class="body-1"
                      style="display: block;"
                    >
                      DOB: 8/6/1959
                    </p>
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                  />
                  <div
                    class="flex flex-row"
                  >
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <div
                      class=""
                      style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                    />
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Mailing Address
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                  />
                  <p
                    class="body-1 ml-2 w-52"
                    style="display: block;"
                  >
                    1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Primary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    7654387656
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Secondary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    N/A
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                </div>
              </div>
              <div
                class="card-elevated  mb-4"
              >
                <div
                  class="flex flex-col m-4"
                >
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <div
                    class="flex flex-row justify-between"
                  >
                    <p
                      class="body-1 ml-2 font-bold body-1"
                      style="display: block;"
                    >
                      Christoff Hall
                    </p>
                  </div>
                  <div
                    class="flex flex-row ml-2"
                  >
                    <p
                      class="body-1"
                      style="display: block;"
                    >
                      DOB: 1/1/2000
                    </p>
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                  />
                  <div
                    class="flex flex-row"
                  >
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <div
                      class=""
                      style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                    />
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Mailing Address
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                  />
                  <p
                    class="body-1 ml-2 w-52"
                    style="display: block;"
                  >
                    1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Primary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    7654387656
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Secondary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    N/A
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                </div>
              </div>
              <div
                class="card-elevated  mb-4"
              >
                <div
                  class="flex flex-col m-4"
                >
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <div
                    class="flex flex-row justify-between"
                  >
                    <p
                      class="body-1 ml-2 font-bold body-1"
                      style="display: block;"
                    >
                      Christo Hall
                    </p>
                  </div>
                  <div
                    class="flex flex-row ml-2"
                  >
                    <p
                      class="body-1"
                      style="display: block;"
                    >
                      DOB: 12/11/2006
                    </p>
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                  />
                  <div
                    class="flex flex-row"
                  >
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <div
                      class=""
                      style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                    />
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Mailing Address
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                  />
                  <p
                    class="body-1 ml-2 w-52"
                    style="display: block;"
                  >
                    1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Primary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    7654387656
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Secondary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    N/A
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                </div>
              </div>
              <div
                class="card-elevated  mb-4"
              >
                <div
                  class="flex flex-col m-4"
                >
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <div
                    class="flex flex-row justify-between"
                  >
                    <p
                      class="body-1 ml-2 font-bold body-1"
                      style="display: block;"
                    >
                      Chrisbalance Hall
                    </p>
                  </div>
                  <div
                    class="flex flex-row ml-2"
                  >
                    <p
                      class="body-1"
                      style="display: block;"
                    >
                      DOB: 12/11/2006
                    </p>
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                  />
                  <div
                    class="flex flex-row"
                  >
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <div
                      class=""
                      style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                    />
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Mailing Address
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                  />
                  <p
                    class="body-1 ml-2 w-52"
                    style="display: block;"
                  >
                    1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Primary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    7654387656
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Secondary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    N/A
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                </div>
              </div>
              <div
                class="card-elevated  mb-4"
              >
                <div
                  class="flex flex-col m-4"
                >
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <div
                    class="flex flex-row justify-between"
                  >
                    <p
                      class="body-1 ml-2 font-bold body-1"
                      style="display: block;"
                    >
                      Christoclaim Hall
                    </p>
                  </div>
                  <div
                    class="flex flex-row ml-2"
                  >
                    <p
                      class="body-1"
                      style="display: block;"
                    >
                      DOB: 12/11/2006
                    </p>
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                  />
                  <div
                    class="flex flex-row"
                  >
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <div
                      class=""
                      style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                    />
                  </div>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Mailing Address
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                  />
                  <p
                    class="body-1 ml-2 w-52"
                    style="display: block;"
                  >
                    1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Primary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    7654387656
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-2 ml-2"
                    style="display: block;"
                  >
                    Secondary Phone Number
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                  />
                  <p
                    class="body-1 ml-2"
                    style="display: block;"
                  >
                    N/A
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="flex flex-col justify-center items-center page"
    >
      <div
        class="flex flex-col app-content app-base-font-color mt-20"
      >
        <h1
          class="title-1 m-4 mb-0 !font-light !text-[32px]/[40px]"
        >
          Plan Contact Information
        </h1>
        <section
          class="flex justify-start self-start mb-6"
        >
          <span
            class="rich-text body-1 undefined"
          >
            <div
              class="flex flex-row body-1 flex-grow md:!flex !block align-top mt-4 ml-4"
            >
              Below is the mailing address and phone number associated with your plan. 
            </div>
          </span>
        </section>
        <div
          class="flex flex-col md:!flex-row"
        >
          <div
            class="flex flex-col flex-grow page-section-36_67 items-stretch md:ml-4"
          >
            <div
              class="card-main small-section !mt-0"
            >
              <div
                class="flex flex-col"
              >
                <h2
                  class="title-2"
                >
                  About Plan Contact Information
                </h2>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <span
                  class="rich-text body-1 undefined"
                >
                  <span>
                    This is the contact information you gave us when you started your plan. It's important to keep it up to date. To change it, you can contact your employer or
                     
                  </span>
                  <span
                    class="link"
                  >
                    <a>
                       start a chat 
                    </a>
                  </span>
                  <span>
                     with us.
                  </span>
                </span>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 12px; min-height: 12px;"
                />
                <span
                  class="rich-text body-1 undefined"
                >
                  <span>
                    Keep in mind, this is not necessarily the phone number you use for keeping your account secure. For that info,
                     
                  </span>
                  <span
                    class="link"
                  >
                    <a>
                       check profile settings.
                    </a>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <span
            style="display: block; width: 32px; min-width: 32px; height: 1px; min-height: 1px;"
          />
          <div
            class="flex flex-col flex-grow page-section-63_33 items-stretch"
          >
            <div
              class="card-elevated  mb-4"
            >
              <div
                class="flex flex-col m-4"
              >
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <div
                  class="flex flex-row justify-between"
                >
                  <p
                    class="body-1 ml-2 font-bold body-1"
                    style="display: block;"
                  >
                    Christmas Hall
                  </p>
                </div>
                <div
                  class="flex flex-row ml-2"
                >
                  <p
                    class="body-1"
                    style="display: block;"
                  >
                    DOB: 6/29/2009
                  </p>
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
                <div
                  class="flex flex-row"
                >
                  <span
                    style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                  />
                  <div
                    class=""
                    style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                  />
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Mailing Address
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                />
                <p
                  class="body-1 ml-2 w-52"
                  style="display: block;"
                >
                  1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Primary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  7654387656
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Secondary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  N/A
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
              </div>
            </div>
            <div
              class="card-elevated  mb-4"
            >
              <div
                class="flex flex-col m-4"
              >
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <div
                  class="flex flex-row justify-between"
                >
                  <p
                    class="body-1 ml-2 font-bold body-1"
                    style="display: block;"
                  >
                    Krissy Hall
                  </p>
                </div>
                <div
                  class="flex flex-row ml-2"
                >
                  <p
                    class="body-1"
                    style="display: block;"
                  >
                    DOB: 6/15/2009
                  </p>
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
                <div
                  class="flex flex-row"
                >
                  <span
                    style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                  />
                  <div
                    class=""
                    style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                  />
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Mailing Address
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                />
                <p
                  class="body-1 ml-2 w-52"
                  style="display: block;"
                >
                  1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Primary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  7654387656
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Secondary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  N/A
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
              </div>
            </div>
            <div
              class="card-elevated  mb-4"
            >
              <div
                class="flex flex-col m-4"
              >
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <div
                  class="flex flex-row justify-between"
                >
                  <p
                    class="body-1 ml-2 font-bold body-1"
                    style="display: block;"
                  >
                    Christian Hall
                  </p>
                </div>
                <div
                  class="flex flex-row ml-2"
                >
                  <p
                    class="body-1"
                    style="display: block;"
                  >
                    DOB: 10/31/2011
                  </p>
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
                <div
                  class="flex flex-row"
                >
                  <span
                    style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                  />
                  <div
                    class=""
                    style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                  />
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Mailing Address
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                />
                <p
                  class="body-1 ml-2 w-52"
                  style="display: block;"
                >
                  1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Primary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  7654387656
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Secondary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  N/A
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
              </div>
            </div>
            <div
              class="card-elevated  mb-4"
            >
              <div
                class="flex flex-col m-4"
              >
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <div
                  class="flex flex-row justify-between"
                >
                  <p
                    class="body-1 ml-2 font-bold body-1"
                    style="display: block;"
                  >
                    Kristy Hall
                  </p>
                </div>
                <div
                  class="flex flex-row ml-2"
                >
                  <p
                    class="body-1"
                    style="display: block;"
                  >
                    DOB: 5/17/1971
                  </p>
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
                <div
                  class="flex flex-row"
                >
                  <span
                    style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                  />
                  <div
                    class=""
                    style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                  />
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Mailing Address
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                />
                <p
                  class="body-1 ml-2 w-52"
                  style="display: block;"
                >
                  1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Primary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  7654387656
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Secondary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  N/A
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
              </div>
            </div>
            <div
              class="card-elevated  mb-4"
            >
              <div
                class="flex flex-col m-4"
              >
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <div
                  class="flex flex-row justify-between"
                >
                  <p
                    class="body-1 ml-2 font-bold body-1"
                    style="display: block;"
                  >
                    Chris Hall
                  </p>
                </div>
                <div
                  class="flex flex-row ml-2"
                >
                  <p
                    class="body-1"
                    style="display: block;"
                  >
                    DOB: 8/6/1959
                  </p>
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
                <div
                  class="flex flex-row"
                >
                  <span
                    style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                  />
                  <div
                    class=""
                    style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                  />
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Mailing Address
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                />
                <p
                  class="body-1 ml-2 w-52"
                  style="display: block;"
                >
                  1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Primary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  7654387656
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Secondary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  N/A
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
              </div>
            </div>
            <div
              class="card-elevated  mb-4"
            >
              <div
                class="flex flex-col m-4"
              >
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <div
                  class="flex flex-row justify-between"
                >
                  <p
                    class="body-1 ml-2 font-bold body-1"
                    style="display: block;"
                  >
                    Christoff Hall
                  </p>
                </div>
                <div
                  class="flex flex-row ml-2"
                >
                  <p
                    class="body-1"
                    style="display: block;"
                  >
                    DOB: 1/1/2000
                  </p>
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
                <div
                  class="flex flex-row"
                >
                  <span
                    style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                  />
                  <div
                    class=""
                    style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                  />
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Mailing Address
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                />
                <p
                  class="body-1 ml-2 w-52"
                  style="display: block;"
                >
                  1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Primary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  7654387656
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Secondary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  N/A
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
              </div>
            </div>
            <div
              class="card-elevated  mb-4"
            >
              <div
                class="flex flex-col m-4"
              >
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <div
                  class="flex flex-row justify-between"
                >
                  <p
                    class="body-1 ml-2 font-bold body-1"
                    style="display: block;"
                  >
                    Christo Hall
                  </p>
                </div>
                <div
                  class="flex flex-row ml-2"
                >
                  <p
                    class="body-1"
                    style="display: block;"
                  >
                    DOB: 12/11/2006
                  </p>
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
                <div
                  class="flex flex-row"
                >
                  <span
                    style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                  />
                  <div
                    class=""
                    style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                  />
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Mailing Address
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                />
                <p
                  class="body-1 ml-2 w-52"
                  style="display: block;"
                >
                  1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Primary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  7654387656
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Secondary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  N/A
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
              </div>
            </div>
            <div
              class="card-elevated  mb-4"
            >
              <div
                class="flex flex-col m-4"
              >
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <div
                  class="flex flex-row justify-between"
                >
                  <p
                    class="body-1 ml-2 font-bold body-1"
                    style="display: block;"
                  >
                    Chrisbalance Hall
                  </p>
                </div>
                <div
                  class="flex flex-row ml-2"
                >
                  <p
                    class="body-1"
                    style="display: block;"
                  >
                    DOB: 12/11/2006
                  </p>
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
                <div
                  class="flex flex-row"
                >
                  <span
                    style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                  />
                  <div
                    class=""
                    style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                  />
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Mailing Address
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                />
                <p
                  class="body-1 ml-2 w-52"
                  style="display: block;"
                >
                  1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Primary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  7654387656
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Secondary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  N/A
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
              </div>
            </div>
            <div
              class="card-elevated  mb-4"
            >
              <div
                class="flex flex-col m-4"
              >
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <div
                  class="flex flex-row justify-between"
                >
                  <p
                    class="body-1 ml-2 font-bold body-1"
                    style="display: block;"
                  >
                    Christoclaim Hall
                  </p>
                </div>
                <div
                  class="flex flex-row ml-2"
                >
                  <p
                    class="body-1"
                    style="display: block;"
                  >
                    DOB: 12/11/2006
                  </p>
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
                <div
                  class="flex flex-row"
                >
                  <span
                    style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                  />
                  <div
                    class=""
                    style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                  />
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Mailing Address
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 1px; min-height: 1px;"
                />
                <p
                  class="body-1 ml-2 w-52"
                  style="display: block;"
                >
                  1 CAMERON HILL CIRCLE CHATTANOOGA, TN 37402
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Primary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  7654387656
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-2 ml-2"
                  style="display: block;"
                >
                  Secondary Phone Number
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <p
                  class="body-1 ml-2"
                  style="display: block;"
                >
                  N/A
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
